Mutation Testing Setup

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,14 @@ code_quality:
     expose_as: 'Code Quality Report'
     paths: [gl-code-quality-report.json]
 
+code_quality_html:
+  extends: code_quality
+  variables:
+    REPORT_FORMAT: html
+  artifacts:
+    expose_as: 'Code Quality Report HTML'
+    paths: [gl-code-quality-report.html]
+
 test:
   stage: test
   script:
@@ -43,13 +51,16 @@ test:
     reports:
       junit: build/test-results/test/**/TEST-*.xml
 
-code_quality_html:
-  extends: code_quality
-  variables:
-    REPORT_FORMAT: html
+mutation-coverage:
+  stage: test
+  script:
+    - 'gradle test pitest'
+    - 'tar -czvf build/reports/pitest.tar.gz build/reports/pitest/'
   artifacts:
-    expose_as: 'Code Quality Report HTML'
-    paths: [gl-code-quality-report.html]
+    when: always
+    expose_as: 'Pitest Report'
+    paths:
+      - build/reports/pitest.tar.gz
 
 coverage-jdk11:
   stage: deploy
